fixed mobile spacing on index.html

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -194,13 +194,22 @@ body {
   float: right;
 }
 
-@media (max-width: 604px) {
+@media (max-width: 720px) {
   #sidebar {
     position: static;
   }
 
   #reviews {
     padding-left: 5%;
+  }
+
+  #title {
+    margin-top: 0;
+  }
+
+  #spacer {
+    height: auto;
+    margin-top: auto;
   }
 
   #search {
